Updated by task 'AUTO_TM_MT_1738002686260'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/release-notes.en/commit/a47b65d135816497583b8c06cf074bf3aef04575

--- a/c-legacy-releases/2020/09102020.md
+++ b/c-legacy-releases/2020/09102020.md
@@ -5,10 +5,10 @@ doc-type: release notes
 last-update: September 2020
 author: mfrei
 exl-id: e652b5bf-d209-4eeb-89fc-af584939d5c5
-source-git-commit: 768938cac02fcc31f707cf1763619eb60d35a1dc
+source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
 workflow-type: tm+mt
 source-wordcount: '5909'
-ht-degree: 97%
+ht-degree: 96%
 
 ---
 
@@ -52,11 +52,11 @@ ht-degree: 97%
 
 ## ![圖示](/assets/ec_appicon_24.png) Experience Cloud 介面 {#ecloud}
 
-如需 Experience Cloud 介面 (客戶屬性、對象、使用者和產品管理) 的最新發行資訊，請參閱[發行說明集錦](https://experienceleague.adobe.com/docs/core-services/interface/release-notes/release-notes.html)。
+如需 Experience Cloud 介面 (客戶屬性、客群、使用者和產品管理) 的最新發行資訊，請參閱[發行說明集錦](https://experienceleague.adobe.com/docs/core-services/interface/release-notes/release-notes.html)。
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) Adobe Experience Platform {#platform}
 
-[!DNL Experience Platform] 和應用程式服務的發行說明，內容包括 [!DNL Experience Platform Launch,] [!UICONTROL 選件]、[!UICONTROL 人員]、[!UICONTROL 地點]、[!UICONTROL 行動服務]和安全性公告。
+[!DNL Experience Platform] 和應用程式服務的發行說明，內容包括 [!DNL Experience Platform Launch,] [!UICONTROL 產品建議]、[!UICONTROL 人員]、[!UICONTROL 地點]、[!UICONTROL 行動服務]和安全性公告。
 
 發行日期：**2020 年 9 月 9 日**
 
@@ -81,7 +81,7 @@ Adobe Experience Platform 現有功能更新：
 | 2020 年 8 月 17 日 | [資料工程師專用 Adobe Experience Platform 快速入門課程簡介](https://video.tv.adobe.com/v/39478) | 影片 | [資料工程師專用 Adobe Experience Platform 快速入門](https://experienceleague.adobe.com/?recommended=ExperiencePlatform-D-1-2020.2)課程的簡介影片。 |
 | 2020 年 8 月 17 日 | [資料工程師專用 Adobe Experience Platform 快速入門](https://experienceleague.adobe.com/?recommended=ExperiencePlatform-D-1-2020.2) | 課程 | 了解如何在 Adobe Experience Platform 中完成資料工程師的主要職務。此入門課程利用影片和實作練習，協助您開始使用 Web SDK 擷取批次資料和串流資料，以及執行查詢等各項作業。 |
 | 2020 年 8 月 17 日 | [資料架構師專用 Adobe Experience Platform 快速入門課程簡介](https://video.tv.adobe.com/v/39477) | 影片 | 影片提供[資料架構師專用 Adobe Experience Platform 快速入門](https://experienceleague.adobe.com/?recommended=ExperiencePlatform-D-1-2020.1)課程概述。 |
-| 2020 年 8 月 17 日 | [資料架構師專用 Adobe Experience Platform 快速入門](https://experienceleague.adobe.com/?recommended=ExperiencePlatform-D-1-2020.1) | 影片 | 了解如何在 Adobe Experience Platform 中完成資料架構師的主要職務。此入門課程利用影片和實作練習，協助您開始建立 XDM 架構的資料模型及標示身分識別，以便將資料與即時客戶設定檔結合、建立區段，以及執行其他作業。 |
+| 2020 年 8 月 17 日 | [資料架構師專用 Adobe Experience Platform 快速入門](https://experienceleague.adobe.com/?recommended=ExperiencePlatform-D-1-2020.1) | 影片 | 了解如何在 Adobe Experience Platform 中完成資料架構師的主要職務。此入門課程利用影片和實作練習，協助您開始建立 XDM 結構描述的資料模型及標示身分識別，以便將資料與即時客戶輪廓結合、建立區段，以及執行其他作業。 |
 
 ## ![圖示](/assets/experience_platform_appicon_24.png) Journey Orchestration {#journey-orch}
 
@@ -97,7 +97,7 @@ Adobe Experience Platform 現有功能更新：
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2020 年 8 月 10 日 | [使用區段資格事件](https://experienceleague.adobe.com/docs/journey-orchestration-learn/tutorials/using-segment-qualification-events.html) | 影片 | 影片概要介紹如何以[!UICONTROL 區段資格]事件作為進入點或退出點，以此建立歷程。 |
+| 2020 年 8 月 10 日 | [使用細分資格篩選事件](https://experienceleague.adobe.com/docs/journey-orchestration-learn/tutorials/using-segment-qualification-events.html) | 影片 | 影片概要介紹如何以[!UICONTROL 細分資格篩選]事件作為進入點或退出點，以此建立歷程。 |
 
 ### Journey Orchestration 的其他資源
 
@@ -118,7 +118,7 @@ Adobe Experience Platform 現有功能更新：
 | 功能 | [全面發佈](https://experienceleague.adobe.com/docs/analytics/landing/an-releases.html) - 目標日期 | 說明 |
 | ----------- | ---------- | ------- |
 | [!UICONTROL 跨裝置分析]：歐洲、中東和非洲地區及亞太地區的上市情況 | 2020 年 8 月 31 日 | 歐洲、中東和非洲地區及亞太地區皆已推出[跨裝置分析](https://experienceleague.adobe.com/docs/analytics/components/cda/overview.html)和私密圖表，供客戶使用。 |
-| 改良[!UICONTROL 跨裝置分析]的欄位結合功能 (全球適用) | 2020 年 8 月 31 日 | 透過這套簡化的[!UICONTROL 跨裝置分析]新客戶實作方案，您可選擇根據 Analytics 欄位 (prop 或 eVar) 所儲存的使用者 ID，執行結合作業，而不使用裝置圖表 (co-op 或私密圖表)。此增強功能移除了實作 ECID 與以 CDA 為目的而實作 ID 同步的需求(部分功能仍需同步 ECID 和 ID)。 |
+| 改良[!UICONTROL 跨裝置分析]的欄位結合功能 (全球適用) | 2020 年 8 月 31 日 | 透過這套簡化的[!UICONTROL 跨裝置分析]新客戶實作方案，您可選擇根據Analytics欄位(prop或eVar)所儲存的使用者ID，執行結合作業，而不使用裝置圖表（co-op或私密圖表）。 此增強功能移除了實作ECID與以CDA為目的而實作ID同步的需求。 (部分功能仍需同步 ECID 和 ID)。 |
 | 蒐集中國資料 (第 2 階段) | 2020 年 9 月 1 日 | 擴大支援第一方 SSL。 |
 | 工作區新增日期範圍 | 2020 年 9 月 10 日 | 新增 5 個日期範圍，您可以選擇以下日期範圍，排除不完整的當天資料：過去 7 天、過去 14 天、過去 30 天、過去 60 天、過去 90 天 |
 | 工作區：下載單一維度的 50,000 個項目 | 2020 年 9 月 17 日 | 您將能以自由格式表格，針對單一維度下載 50,000 個項目，並套用區段和篩選條件。這可讓您存取 Analysis Workspace 以外超過 400 列的資料。[更多詳情...](https://experienceleague.adobe.com/docs/analytics/analyze/analysis-workspace/curate-share/download-send.html#download-items) |
@@ -223,12 +223,12 @@ Audience Manager 的新功能、修正項目、說明文件和教學課程。
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2020 年 8 月 17 日 | [將 Audience Manager 區段對應至目的地](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/traits-and-segments/mapping-audience-manager-segments-to-destinations.html) | 影片 | 介紹 Audience Manager 中的各種目的地類型，並說明將區段對應至各個目的地類型的詳細資訊。 |
-| 2020 年 8 月 14 日 | [充分運用設定檔合併規則：秘訣、技巧和策略](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/profile-merge/customer-tips-getting-the-most-out-of-profile-merge-rules.html) | 文章 | 由 [!DNL Accordant] 多重解決方案顧問 Varun Kalra 傳授選擇及使用[!UICONTROL 設定檔合併規則]的秘訣。 |
+| 2020 年 8 月 14 日 | [充分運用輪廓合併規則：秘訣、技巧和策略](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/profile-merge/customer-tips-getting-the-most-out-of-profile-merge-rules.html) | 文章 | 由 [!DNL Accordant] 多重解決方案顧問 Varun Kalra 傳授選擇及使用[!UICONTROL 輪廓合併規則]的秘訣。 |
 | 2020 年 8 月 14 日 | [特徵和區段最佳作法](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/traits-and-segments/customer-tips-traits-and-segments-best-practices.html) | 文章 | 由 [!DNL Ally Financial] 資深行銷專員 Matt Vittorioso 傳授管理特徵的秘訣。 |
-| 2020 年 8 月 12 日 | [了解及設定 Google 目標客戶比對以人物為基礎的目的地](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/data-activation/people-based-destinations/understanding-and-configuring-the-google-customer-match-pbd.html) | 影片 | 影片會逐步帶您了解 Google 目標客戶比對[!UICONTROL 以人物為基礎的目的地]的詳細資訊和使用案例，包括逐步說明如何建立區段及對應至目的地。此外，影片也會示範 Google Ad Console 中的受眾登陸作業。 |
-| 2020 年 8 月 13 日 | [課程簡介 - 對象區段建立與策略](https://video.tv.adobe.com/v/39091) | 影片 | 此影片提供「對象區段建立與策略」課程的內容說明。 |
+| 2020 年 8 月 12 日 | [了解及設定 Google 目標客戶比對以人物為基礎的目的地](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/data-activation/people-based-destinations/understanding-and-configuring-the-google-customer-match-pbd.html) | 影片 | 影片會逐步帶您了解 Google 目標客戶比對[!UICONTROL 以人物為基礎的目的地]的詳細資訊和使用案例，包括逐步說明如何建立區段及對應至目的地。此外，影片也會示範 Google Ad Console 中的客群登陸作業。 |
+| 2020 年 8 月 13 日 | [課程簡介 - 客群區段建立與策略](https://video.tv.adobe.com/v/39091) | 影片 | 此影片提供「客群區段建立與策略」課程的內容說明。 |
 | 2020 年 8 月 13 日 | [在建立區段時使用程式碼檢視](https://experienceleague.adobe.com/docs/audience-manager-learn/tutorials/build-and-manage-audiences/traits-and-segments/using-code-view-when-building-segments.html) | 影片 | 了解如何使用程式碼檢視來定義區段，並且建立複雜的特徵組合，包括使用造訪間隔和頻率。 |
-| 2020 年 8 月 21 日 | [對象區段建立與策略](https://experienceleague.adobe.com/?recommended=AudienceManager-U-1-2020.2) | 課程 | 本課程會詳細介紹區段，告訴您如何建立及管理區段，以及如何對目的地合作夥伴啟用區段。您可以查看幾個實用的使用案例，甚至向客戶學習幾項秘訣和技巧。 |
+| 2020 年 8 月 21 日 | [客群區段建立與策略](https://experienceleague.adobe.com/?recommended=AudienceManager-U-1-2020.2) | 課程 | 本課程會詳細介紹區段，告訴您如何建立及管理區段，以及如何對目的地合作夥伴啟用區段。您可以查看幾個實用的使用案例，甚至向客戶學習幾項秘訣和技巧。 |
 
 ## ![圖示](/assets/aem.png) Adobe Experience Manager {#aem}
 
@@ -253,7 +253,7 @@ AEM 6.4 Service Pack 8 Cumulative Fix Pack 2 (6.4.8.2，已於 2020 年 9 月 3 
   [!UICONTROL AEM as a Cloud Service ]新增了哪些功能？精選重點包括：
 
    * [!UICONTROL AEM as a Cloud Service]可讓您[將頁面和子頁面 (頁面樹狀結構) 還原為舊版](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/sites/authoring/features/page-versions.html#reinstating-versions)。
-   * 現支援透過資產微服務將影片轉碼，且[!UICONTROL 「處理設定檔」]畫面中新增[!UICONTROL 「視訊」]區段，支援視訊位元速率和維度設定 (輸出格式為使用 H.264 轉碼器的 MP4)。如需詳細資訊，請參閱[管理視訊資產](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/assets/manage/manage-video-assets.html#transcode-video)。如需更多轉碼選項及傳送更多視訊，可使用 [!UICONTROL Dynamic Media] 附加元件。
+   * 現支援透過資產微服務將影片轉碼，且[!UICONTROL 「處理輪廓」]畫面中新增[!UICONTROL 「視訊」]區段，支援視訊位元速率和維度設定 (輸出格式為使用 H.264 轉碼器的 MP4)。如需詳細資訊，請參閱[管理視訊資產](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/assets/manage/manage-video-assets.html#transcode-video)。如需更多轉碼選項及傳送更多視訊，可使用 [!UICONTROL Dynamic Media] 附加元件。
    * 全新的資產下載體驗提供以下優勢：
       * 非同步下載大量內容，以免使用者久候。
       * 滿足開發人員擴充需求的全新模組化 API。
@@ -395,7 +395,7 @@ Campaign Classic、Campaign Standard 和控制面板的發行資訊。
 
 ### 說明資源
 
-* Adobe Campaign Standard：[說明中心](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [做法影片](https://experienceleague.adobe.com/docs/campaign-learn/campaign-standard-tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新內容](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
+* Adobe Campaign Standard：[說明中心](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [做法影片](https://experienceleague.adobe.com/docs/campaign-learn/campaign-standard-tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新內容](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home)
 * Adobe Campaign Classic：[說明中心](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [版本注意事項](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [做法影片](https://experienceleague.adobe.com/docs/campaign-learn/campaign-classic-tutorials/overview.html)- [最新文件更新內容](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
 * Adobe Campaign控制面板： [檔案](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes.html?lang=zh-Hant) - [Campaign Standard](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/administrating/control-panel/control-panel-overview.html) / [Campaign Classic](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/administrating/control-panel-acc/control-panel-overview.html)的做法影片
 
