--- a/c-legacy-releases/2023/03082023.md
+++ b/c-legacy-releases/2023/03082023.md
@@ -6,14 +6,14 @@ last-update: March 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: bff918b2-1f21-4375-af54-312347de0b2f
-source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
+source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
 workflow-type: tm+mt
 source-wordcount: '3630'
 ht-degree: 98%
 
 ---
 
-# Experience Cloud版本注意事項 — 2023年3月
+# Experience Cloud 發行說明 - 2023 年 3 月
 
 ![橫幅](assets/release-notes-header.png)
 
@@ -104,13 +104,13 @@ ht-degree: 98%
 
 ## ![圖示](/assets/ec_appicon_24.png)Experience Cloud 介面與管理 {#ecloud}
 
-尋找下列項目的更新：Experience Cloud 介面首頁、管理 (產品和使用者管理)、使用者設定檔設定、偏好設定、搜尋和 Cookie。
+尋找下列項目的更新：Experience Cloud 介面首頁、管理 (產品和使用者管理)、使用者輪廓設定、偏好設定、搜尋和 Cookie。
 
 +++詳細資訊
 
 _在 3 月未更新。_
 
-如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 對象]).
+如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html?lang=zh-Hant) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 客群]).
 
 +++
 
@@ -128,7 +128,7 @@ _在 3 月未更新。_
 
 | 類型 | 產品功能 | 說明 | 應用程式 |
 | -----------| ---------- |---------- |---------- |
-| 2023 年 3 月 | [使用 Adobe Analytics 來源連接器擷取資料](https://experienceleague.adobe.com/docs/platform-learn/tutorials/sources/ingest-data-from-adobe-analytics.html?lang=zh-Hant) | 已更新的影片 | 將資料從 Adobe Analytics 串流、對應和篩選到 Adobe Experience Platform 的即時客戶設定檔和 Experience 資料湖中。 | 資料擷取 |
+| 2023 年 3 月 | [使用 Adobe Analytics 來源連接器擷取資料](https://experienceleague.adobe.com/docs/platform-learn/tutorials/sources/ingest-data-from-adobe-analytics.html?lang=zh-Hant) | 已更新的影片 | 將資料從 Adobe Analytics 串流、對應和篩選到 Adobe Experience Platform 的即時客戶輪廓和 Experience 資料湖中。 | 資料擷取 |
 
 {style="table-layout:auto"}
 
@@ -138,7 +138,7 @@ _在 3 月未更新。_
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2023 年 2 月 | [ [!DNL Microsoft Bing]  AEP 目的地中沒有對象規模](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21544.html?lang=zh-Hant) | 新文章 | 了解為什麼 [!DNL Bing] 對於傳送到 AEP [!DNL Bing] 目的地的 AEP 區段沒有顯示任何對象規模? |
+| 2023 年 2 月 | [ [!DNL Microsoft Bing]  AEP 目的地中沒有客群規模](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21544.html?lang=zh-Hant) | 新文章 | 了解為什麼 [!DNL Bing] 對於傳送到 AEP [!DNL Bing] 目的地的 AEP 區段沒有顯示任何客群規模? |
 | 2023 年 2 月 | [RTCDP 授權附帶的環境 (開發、中繼、生產) 數量是多少？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21590.html?lang=zh-Hant) | 新文章 | 了解 RTCDP 授權附帶的環境和沙箱的數量。 |
 | 2023 年 2 月 | [目標啟動上的&#x200B;_套用轉換_ 選項在雜湊之前是否標準化 (例如小寫)？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21591.html?lang=zh-Hant) | 新文章 | 進一步了解一般資料標準化及其解決方法。 |
 
@@ -299,7 +299,7 @@ _新功能_
   >
   >RDE 計劃在未來幾週內逐步推出。您可以寄送電子郵件至 [aemcs-rde-support@adobe.com](mailto:aemcs-rde-support@adobe.com) 跳到前端。
 
-* [擴展對伺服器端 API 存取權杖的支援](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/generating-access-tokens-for-server-side-apis.html) – 您現在可以產生多個憑證，這有助於 API 具有不同特性的使用案例。現在也能以自助式方式撤銷憑證。
+* [擴展對伺服器端 API 存取權杖的支援](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/generating-access-tokens-for-server-side-apis.html) – 您現在可以產生多個認證，這有助於 API 具有不同特性的使用案例。現在也能以自助式方式撤銷認證。
 
 ### [!DNL Cloud Manager]
 
@@ -456,14 +456,14 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
 | 2023 年 2 月 | [是否支援 TLS 1.3？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21516.html?lang=zh-Hant) | 新文章 | 了解 TLS 1.3 的支援狀態。 |
-| 2023 年 2 月 | [未顯示設定檔和服務的 API 更新](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21517.html?lang=zh-Hant) | 新文章 | 了解這個問題的解決方法：在最新版本的 ACS 中發佈對長文字屬性的自訂資源變更時，沒有更新 API。 |
+| 2023 年 2 月 | [未顯示輪廓和服務的 API 更新](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21517.html?lang=zh-Hant) | 新文章 | 了解這個問題的解決方法：在最新版本的 ACS 中發佈對長文字屬性的自訂資源變更時，沒有更新 API。 |
 
 {style="table-layout:auto"}
 
 ### [!DNL Campaign] 說明資源
 
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign/campaign-v8/new/whats-new.html?lang=zh-Hant) - [實作指南](https://experienceleague.adobe.com/docs/campaign/campaign-v8/config/implement/implement.html?lang=zh-Hant)
-* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
+* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home)
 * [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
 * [!DNL Campaign]控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html?lang=zh-Hant)的操作方法影片
 
@@ -610,7 +610,7 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 報表] | (3 月發行) 新的[!UICONTROL 家庭]報告顯示跨家庭層級之各種維度的曝光數、觸及率和頻率 (根據 IP 位址)，而不是裝置/Cookie 層級。該報告包含九個維度：[!UICONTROL 行銷活動]、[!UICONTROL 套件]、[!UICONTROL 版位]、[!UICONTROL 網站/應用程式]、[!UICONTROL 媒體類型]、[!UICONTROL 裝置]、[!UICONTROL 對象]、[!UICONTROL 創意長度]和使用者建立的[!UICONTROL 標記]。 |
+| [!UICONTROL 報表] | (3 月發行) 新的[!UICONTROL 家庭]報告顯示跨家庭層級之各種維度的曝光數、觸及率和頻率 (根據 IP 位址)，而不是裝置/Cookie 層級。該報告包含九個維度：[!UICONTROL 行銷活動]、[!UICONTROL 套件]、[!UICONTROL 版位]、[!UICONTROL 網站/應用程式]、[!UICONTROL 媒體類型]、[!UICONTROL 裝置]、[!UICONTROL 客群]、[!UICONTROL 創意長度]和使用者建立的[!UICONTROL 標記]。 |
 
 {style="table-layout:auto"}
 
@@ -620,9 +620,9 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 行銷活動] | ([!DNL Microsoft Advertising] 對象行銷活動；公開 Beta 版功能；3 月 18 日發行) 對象行銷活動現在可以使用增強型 CPC (eCPC) 出價策略。您可以在子廣告群組設定中設定出價。<br><br>具有 eCPC 的對象行銷活動可以包含在產品組合中以最佳化。 |
+| [!UICONTROL 行銷活動] | ([!DNL Microsoft Advertising] 客群行銷活動；公開 Beta 版功能；3 月 18 日發行) 客群行銷活動現在可以使用增強型 CPC (eCPC) 出價策略。您可以在子廣告群組設定中設定出價。<br><br>具有 eCPC 的客群行銷活動可以包含在產品組合中以最佳化。 |
 | [!UICONTROL 行銷活動]、[!UICONTROL 產品組合] | ([!DNL Google Ads] 帳戶；公開 Beta 版功能) [!DNL Google Ads] 最高成效行銷活動現在可使用最佳化支援，您可以將其新增到混合產品組合中。出價策略目標和行銷活動預算是在行銷活動層級設定的。 |
-| [!UICONTROL 行銷活動]、[!UICONTROL 報告] | ([!DNL Google Ads] 和 [!DNL Microsoft Advertising] 帳戶；3 月 18 日發行) 行銷活動管理檢視和報告中提供了以下新的「顯眼程度」量度：<ul><li><p>[!UICONTROL 內容是]：您在顯示/對象網路上獲得的曝光數除以您有資格獲得的預計廣告曝光數。</p><p>這個和其他「[!UICONTROL 內容]*」量度可用於與內容廣告相關之實體的所有行銷活動管理檢視，以及相關的基本報告：[!UICONTROL 搜尋引擎]、[!UICONTROL 搜尋引擎帳戶]、[!UICONTROL 行銷活動]、[!UICONTROL 廣告群組]和[!UICONTROL 產品組合]。</p></li><li><p>[!UICONTROL 內容遺失是 (預算)]：由於您的每日或每月預算過低，您的廣告在顯示/對象網路上未獲得之曝光數的估計百分比。<p></li><li><p>[!UICONTROL 內容遺失是 (排名)]：由於排名不佳，您的廣告在顯示/對象網路上未獲得之曝光數的估計百分比。</p></li><li><p>[!UICONTROL 完全相符搜尋是]：與您的關鍵字完全相符之搜尋所獲得的曝光數除以您有資格獲得的估計完全相符曝光數。</p><p>這個量度可用於與搜尋廣告相關之實體的所有行銷活動管理檢視，以及相關的基本報告：[!UICONTROL 搜尋引擎]、[!UICONTROL 搜尋引擎帳戶]、[!UICONTROL 行銷活動]、[!UICONTROL 廣告群組]、[!UICONTROL 關鍵字]、[!UICONTROL 產品群組]和[!UICONTROL 產品組合]。它們也位在[!UICONTROL 規範]、[!UICONTROL 標籤分類]和[!UICONTROL 標籤值]報告中。</p></li></ul> |
+| [!UICONTROL 行銷活動]、[!UICONTROL 報告] | ([!DNL Google Ads] 和 [!DNL Microsoft Advertising] 帳戶；3 月 18 日發行) 行銷活動管理檢視和報告中提供了以下新的「顯眼程度」量度：<ul><li><p>[!UICONTROL 內容是]：您在顯示/客群網路上獲得的曝光數除以您有資格獲得的預計廣告曝光數。</p><p>這個和其他「[!UICONTROL 內容]*」量度可用於與內容廣告相關之實體的所有行銷活動管理檢視，以及相關的基本報告：[!UICONTROL 搜尋引擎]、[!UICONTROL 搜尋引擎帳戶]、[!UICONTROL 行銷活動]、[!UICONTROL 廣告群組]和[!UICONTROL 產品組合]。</p></li><li><p>[!UICONTROL 內容遺失是 (預算)]：由於您的每日或每月預算過低，您的廣告在顯示/客群網路上未獲得之曝光數的估計百分比。<p></li><li><p>[!UICONTROL 內容遺失是 (排名)]：由於排名不佳，您的廣告在顯示/客群網路上未獲得之曝光數的估計百分比。</p></li><li><p>[!UICONTROL 完全相符搜尋是]：與您的關鍵字完全相符之搜尋所獲得的曝光數除以您有資格獲得的估計完全相符曝光數。</p><p>這個量度可用於與搜尋廣告相關之實體的所有行銷活動管理檢視，以及相關的基本報告：[!UICONTROL 搜尋引擎]、[!UICONTROL 搜尋引擎帳戶]、[!UICONTROL 行銷活動]、[!UICONTROL 廣告群組]、[!UICONTROL 關鍵字]、[!UICONTROL 產品群組]和[!UICONTROL 產品組合]。它們也位在[!UICONTROL 規範]、[!UICONTROL 標籤分類]和[!UICONTROL 標籤值]報告中。</p></li></ul> |
 
 {style="table-layout:auto"}
 
