--- a/c-legacy-releases/2023/04122023.md
+++ b/c-legacy-releases/2023/04122023.md
@@ -6,14 +6,14 @@ last-update: April 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: 41549c5d-b6e9-426a-a9f0-709f959cfd45
-source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
+source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
 workflow-type: tm+mt
 source-wordcount: '4473'
 ht-degree: 98%
 
 ---
 
-# Experience Cloud版本注意事項 — 2023年4月
+# Experience Cloud 發行說明 - 2023 年 4 月
 
 ![橫幅](assets/release-notes-header.png)
 
@@ -94,13 +94,13 @@ ht-degree: 98%
 
 ## ![圖示](/assets/ec_appicon_24.png)Experience Cloud 介面與管理 {#ecloud}
 
-尋找下列項目的更新：Experience Cloud 介面首頁、管理 (產品和使用者管理)、使用者設定檔設定、偏好設定、搜尋和 Cookie。
+尋找下列項目的更新：Experience Cloud 介面首頁、管理 (產品和使用者管理)、使用者輪廓設定、偏好設定、搜尋和 Cookie。
 
 +++詳細資訊
 
 _在 4 月未更新。_
 
-如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 對象])。
+如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 客群])。
 
 +++
 
@@ -309,7 +309,7 @@ _新功能_
   >
   >RDE 計劃在未來幾週內逐步推出。您可以寄送電子郵件至 [aemcs-rde-support@adobe.com](mailto:aemcs-rde-support@adobe.com) 跳到前端。
 
-* [擴展對伺服器端 API 存取權杖的支援](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/generating-access-tokens-for-server-side-apis.html) – 您現在可以產生多個憑證，這有助於 API 具有不同特性的使用案例。現在也能以自助式方式撤銷憑證。
+* [擴展對伺服器端 API 存取權杖的支援](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/developing/generating-access-tokens-for-server-side-apis.html) – 您現在可以產生多個認證，這有助於 API 具有不同特性的使用案例。現在也能以自助式方式撤銷認證。
 
 ### [!DNL Cloud Manager]
 
@@ -331,7 +331,7 @@ _API 變更_
 
 _版本重點_
 
-* Experience Manager 在 Workfront 中建立專案連結的資料夾時的性能得到改進。
+* Experience Manager 在 Workfront 中建立專案連結的資料夾時的效能得到改進。
 * 在 Workfront 中刪除評論現在會反映在 Experience Manager 中。
 * 能夠管理禁止 Experience Manager as a Cloud Service 的全新客戶設定連接器。
 
@@ -495,7 +495,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2023 年 4 月 | [管理時區](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/automating-with-workflows/manage-time-zones.html) | 影片 | 了解如何將時區套用至排定的工作流程活動。 | Campaign v8 |
 | 2023 年 4 月 | [認識隔離管理](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/sending-messages/monitoring-messages/quarantine-management.html) | 影片 | 了解隔離管理在 Adobe Campaign 中的運作方式，並了解如何管理被隔離的地址。 | Campaign v8 |
 | 2023 年 4 月 | [排程訊息](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/communication-channels/email/schedule-messages.html) | 影片 | 了解如何排程電子郵件傳遞。 | Campaign v8 |
-| 2023 年 4 月 | [傳送電子郵件傳遞的證明](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/communication-channels/email/sending-test-preparing-sending-email.html) | 影片 | 了解如何先測試電子郵件訊息，再傳送給最終收件者。 | Campaign v8 |
+| 2023 年 4 月 | [傳送電子郵件傳遞的校樣](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/communication-channels/email/sending-test-preparing-sending-email.html) | 影片 | 了解如何先測試電子郵件訊息，再傳送給最終收件者。 | Campaign v8 |
 
 {style="table-layout:auto"}
 
@@ -514,8 +514,8 @@ Adobe Commerce 的新文章和現有文章的更新。
 ### [!DNL Campaign] 說明資源
 
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign/campaign-v8/new/whats-new.html?lang=zh-Hant) - [實作指南](https://experienceleague.adobe.com/docs/campaign/campaign-v8/config/implement/implement.html?lang=zh-Hant)
-* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
-* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
+* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home)
+* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
 * [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html?lang=zh-Hant)
 
 +++
@@ -537,7 +537,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 4 月 | [使用訊息編輯器匯入及編寫 HTML 電子郵件內容](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/email-channel/import-and-author-html-email-content.html?lang=zh-Hant) | 已更新的影片 | 瞭解如何匯入現有的 HTML 內容、調整設計、新增鏡像頁面和取消訂閱連結，以及如何編寫內容的程式碼。 |
-| 2023 年 4 月 | [決策管理 - 頻率限定](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/decision-management/frequency-capping.html) | 影片 | 了解 Offer Decisioning 的頻率限定如何運作。了解如何設定自訂事件的頻率限定，以及如何透過定義頻率來設定增量。 |
+| 2023 年 4 月 | [決策管理 - 頻率上限](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/decision-management/frequency-capping.html) | 影片 | 了解 Offer Decisioning 的頻率上限如何運作。了解如何設定自訂事件的頻率上限，以及如何透過定義頻率來設定增量。 |
 | 2023 年 4 月 | [建立應用程式內行銷活動](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/in-app-channel/create-an-in-app-campaign.html) | 影片 | 了解什麼是應用程式內訊息。 了解如何在 Campaigns 中建立、設定和發佈應用程式內訊息。 |
 | 2023 年 4 月 | [撰寫應用程式內訊息](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/in-app-channel/author-in-app-messages.html) | 影片 | 了解如何撰寫及測試應用程式內訊息。 |
 
@@ -662,7 +662,7 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 報表] | (3 月發行) 新的[!UICONTROL 家庭]報告顯示跨家庭層級之各種維度的曝光數、觸及率和頻率 (根據 IP 位址)，而不是裝置/Cookie 層級。該報告包含九個維度：[!UICONTROL 行銷活動]、[!UICONTROL 套件]、[!UICONTROL 版位]、[!UICONTROL 網站/應用程式]、[!UICONTROL 媒體類型]、[!UICONTROL 裝置]、[!UICONTROL 對象]、[!UICONTROL 創意長度]和使用者建立的[!UICONTROL 標記]。 |
+| [!UICONTROL 報表] | (3 月發行) 新的[!UICONTROL 家庭]報告顯示跨家庭層級之各種維度的曝光數、觸及率和頻率 (根據 IP 位址)，而不是裝置/Cookie 層級。該報告包含九個維度：[!UICONTROL 行銷活動]、[!UICONTROL 套件]、[!UICONTROL 版位]、[!UICONTROL 網站/應用程式]、[!UICONTROL 媒體類型]、[!UICONTROL 裝置]、[!UICONTROL 客群]、[!UICONTROL 創意長度]和使用者建立的[!UICONTROL 標記]。 |
 
 {style="table-layout:auto"}
 
@@ -672,8 +672,8 @@ Last updated: **August 9, 2022**
 
 | 功能 | 說明 |
 | ------- | ----------- |
-| [!UICONTROL 行銷活動] | ([!DNL Microsoft® Advertising] 對象行銷活動；4 月 15 日發行) 對象行銷活動現在可以使用「手動 CPM」競標策略。您可以在子廣告群組設定中設定出價。<br><br>CPM 行銷活動無法使用最佳化支援。 |
-| [!UICONTROL Recommendations] | 六個新 ([!DNL Google Ads] 建議可從 [!UICONTROL Insights &amp; Reports] > [!UICONTROL Recommendations] 取得：<ul><li>[!UICONTROL 回應式搜尋提高廣告強度]：關於提高回應式搜尋廣告之廣告強度的建議</li><li>[!UICONTROL 將本地行銷活動升級到最高成效]：將舊版本地行銷活動升級到最高成效行銷活動</li><li>[!UICONTROL 將智慧購物行銷活動升級到最高成效]：將舊版智慧購物行銷活動升級到最高成效行銷活動</li><li>[!UICONTROL 預測設定的 Target ROAS]：在預計會增加流量的季節性活動之前提高預算，並將競標策略從[!DNL Maximize Conversion Value] 變更到 [!DNL Target ROAS]</li><li>[!UICONTROL 提高太低的 Target CPA 競標]：當 [!DNL Target CPA] 太低且很少或沒有轉換時，按建議量提高。</li><li>[!UICONTROL 顯示擴展選擇加入]：更新行銷活動以使用顯示擴展來擴大觸及率</li></ul>由於新增和刪除資產、變更行銷活動類型以及變更預算和競標策略都會影響成效，因此我們建議您與 Adobe 客戶團隊討論每項建議的利弊，以便您做出明智的決定。 |
+| [!UICONTROL 行銷活動] | ([!DNL Microsoft® Advertising] 客群行銷活動；4 月 15 日發行) 客群行銷活動現在可以使用「手動 CPM」競標策略。您可以在子廣告群組設定中設定出價。<br><br>CPM 行銷活動無法使用最佳化支援。 |
+| [!UICONTROL 推薦] | 六個新 ([!DNL Google Ads] 建議可從 [!UICONTROL Insights &amp; Reports] > [!UICONTROL 推薦] 取得：<ul><li>[!UICONTROL 回應式搜尋提高廣告強度]：關於提高回應式搜尋廣告之廣告強度的建議</li><li>[!UICONTROL 將本地行銷活動升級到最高成效]：將舊版本地行銷活動升級到最高成效行銷活動</li><li>[!UICONTROL 將智慧購物行銷活動升級到最高成效]：將舊版智慧購物行銷活動升級到最高成效行銷活動</li><li>[!UICONTROL 預測設定的 Target ROAS]：在預計會增加流量的季節性活動之前提高預算，並將競標策略從[!DNL Maximize Conversion Value] 變更到 [!DNL Target ROAS]</li><li>[!UICONTROL 提高太低的 Target CPA 競標]：當 [!DNL Target CPA] 太低且很少或沒有轉換時，按建議量提高。</li><li>[!UICONTROL 顯示擴展選擇加入]：更新行銷活動以使用顯示擴展來擴大觸及率</li></ul>由於新增和刪除資產、變更行銷活動類型以及變更預算和競標策略都會影響成效，因此我們建議您與 Adobe 客戶團隊討論每項建議的利弊，以便您做出明智的決定。 |
 
 {style="table-layout:auto"}
 
