--- a/c-legacy-releases/2023/05102023.md
+++ b/c-legacy-releases/2023/05102023.md
@@ -6,9 +6,9 @@ last-update: May 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: 50843662-c272-43de-a737-04a0ee20cb0b
-source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
+source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
 workflow-type: tm+mt
-source-wordcount: '4306'
+source-wordcount: '4154'
 ht-degree: 98%
 
 ---
@@ -107,7 +107,7 @@ ht-degree: 98%
 
 ## ![圖示](/assets/ec_appicon_24.png)Experience Cloud 介面與管理 {#ecloud}
 
-尋找下列項目的更新：Experience Cloud 介面首頁、管理 (產品和使用者管理)、使用者設定檔設定、偏好設定、搜尋和 Cookie。
+尋找下列項目的更新：Experience Cloud 介面首頁、管理 (產品和使用者管理)、使用者輪廓設定、偏好設定、搜尋和 Cookie。
 
 +++詳細資訊
 
@@ -115,7 +115,7 @@ ht-degree: 98%
 
 * 已更新「說明」選單，現包含 Experience League 教學影片、產品文件和同業貼文的搜尋結果。 您可在 Experience League 中檢視結果。
 
-如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 對象])。
+如需說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包括 [!UICONTROL 客戶屬性]和[!UICONTROL 客群])。
 
 +++
 
@@ -147,8 +147,8 @@ New videos, tutorials, or courses published for Adobe Experience Platform.-->
 
 | 發佈日期 | 名稱 | 類型 | 說明 | 應用程式 |
 | -----------| ---------- | ---------- | ---------- |---------- |
-| 2023 年 5 月 | [在 [!DNL Real-Time Customer Data Platform] 中設定  [!DNL Adobe Target]  目的地](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/configure-the-target-destination.html) | 影片 | 了解如何在 [!DNL Real-Time Customer Data Platform] 中設定 Adobe Target 目的地以開始從 [!DNL Real-Time CDP] 傳送區段和設定檔屬性到 [!DNL Adobe Target]。 | [!DNL Real-Time CDP]、[!DNL Adobe Target] |
-| 2023 年 5 月 | [分享區段和設定檔屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/activate-segments-and-profile-attributes.html) | 影片 | 了解如何從 Adobe [!DNL Real-Time Customer Data Platform] 分享區段和設定檔屬性到 [!DNL Adobe Target] 以在您的網站、行動應用程式和其他數位資產中顯示即時個人化內容。 | [!DNL Adobe Target] |
+| 2023 年 5 月 | [在 [!DNL Real-Time Customer Data Platform] 中設定  [!DNL Adobe Target]  目的地](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/configure-the-target-destination.html) | 影片 | 了解如何在 [!DNL Real-Time Customer Data Platform] 中設定 Adobe Target 目的地以開始從 [!DNL Real-Time CDP] 傳送區段和輪廓屬性到 [!DNL Adobe Target]。 | [!DNL Real-Time CDP]、[!DNL Adobe Target] |
+| 2023 年 5 月 | [分享區段和輪廓屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/activate-segments-and-profile-attributes.html) | 影片 | 了解如何從 Adobe [!DNL Real-Time Customer Data Platform] 分享區段和輪廓屬性到 [!DNL Adobe Target] 以在您的網站、行動應用程式和其他數位資產中顯示即時個人化內容。 | [!DNL Adobe Target] |
 | 2023 年 5 月 | [在 Target 中使用 Real-Time CDP 區段](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/use-rtcdp-segments-in-target.html) | 影片 | 了解如何在 [!DNL Adobe Target] 中使用 [!DNL Real-Time Customer Data Platform] 區段，以在您的網站和行動應用程式上提供個人化體驗。 | [!DNL Adobe Target] |
 
 {style="table-layout:auto"}
@@ -262,7 +262,7 @@ Adobe 建議您瀏覽以下資源，以隨時掌握發佈內容資訊：
 
 _新功能_
 
-* 將 AEM as a Cloud Service 中的內容片段匯出到 Adobe Target 作為 JSON 選件。
+* 將 AEM as a Cloud Service 中的內容片段匯出到 Adobe Target 作為 JSON 產品建議。
 * 支援 GraphQL 分頁和排序，以及內部快取增強功能，現在可協助提升分離的用戶端應用程式在使用複雜 GraphQL 查詢和篩選器從 AEM 擷取大型內容集時的工作效能。
 
 ### [!DNL Experience Manager Assets] as a [!DNL Cloud Service]
@@ -301,12 +301,6 @@ _新功能_
 ### [!DNL Cloud Manager]
 
 * [AEM Project Archetype](https://experienceleague.adobe.com/docs/experience-manager-core-components/using/developing/archetype/overview.html) 已更新至版本 41。
-
-**錯誤修正**
-
-* 當[憑證](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/manage-ssl-certificates/introduction.html)到期時，與該憑證關聯的[網域名稱](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/custom-domain-names/introduction.html)和 [IP 允許清單](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/ip-allow-lists/introduction.html)將不再從 CDN 中刪除。在這種情況下，網站仍接受訪客造訪。
-* Cloud Manager UI 提供更明顯的警告：[SSL 憑證](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/manage-ssl-certificates/introduction.html)即將到期。
-* 已修復客戶無法建立或刪除環境的罕見情況。
 
 ### [!DNL Workfront for Experience Manager] 增強型連接器
 
@@ -361,7 +355,7 @@ _已知問題_
 | -----------| ---------- | ---------- | ---------- | ------|
 | 2023 年 5 月 | [整合 Experience Platform Web SDK](https://experienceleague.adobe.com/docs/experience-manager-learn/sites/integrations/experience-platform/web-sdk.html#create-datastream---experience-platform) | 影片 | 了解如何將 AEM as a Cloud Service 與 Experience Platform Web SDK 整合。 | AEM Sites |
 | 2023 年 5 月 | [在互動式通訊中自訂文字編輯器](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/interactive-communications/customize-text-editor.html) | 影片 | 在互動式通訊中自訂文字編輯器以新增自訂字型和大小。 | AEM Forms |
-| 2023 年 5 月 | [React 應用程式與 AEM Forms 和 Acrobat Sign](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/react-ic-sign/introduction.html) | 影片 | 使用從原生 React 應用程式提交的資料建立互動式通訊文件，並將其呈現給一般使用者以使用 Acrobat 簽名 Widget 進行簽名 | AEM Forms |
+| 2023 年 5 月 | [React 應用程式與 AEM Forms 和 Acrobat Sign](https://experienceleague.adobe.com/docs/experience-manager-learn/forms/react-ic-sign/introduction.html) | 影片 | 使用從原生 React 應用程式提交的資料建立互動式通訊文件，並將其呈現給一般使用者以使用 Acrobat 簽名小工具進行簽名 | AEM Forms |
 | 2023 年 5 月 | [將 Forms CS 與 Sharepoint 整合](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/forms/one-drive/store-form-submission-in-sharepoint.html) | 影片 | 了解如何設定和將 AEM Forms CS 與 Microsoft® Sharepoint 整合。 | AEM Forms CS |
 | 2023 年 5 月 | [將表單提交內容儲存於 OneDrive](https://experienceleague.adobe.com/docs/experience-manager-learn/cloud-service/forms/one-drive/store-form-submission-one-drive.html) | 影片 | 設定最適化表單，將表單資料儲存於 OneDrive。 | AEM Forms CS |
 | 2023 年 5 月 | [如何使用 AEM Headless 中的最佳化影像](https://experienceleague.adobe.com/docs/experience-manager-learn/getting-started-with-aem-headless/how-to/images.html) | 影片 | 如何使用 AEM Headless 中的最佳化影像。 | AEM CS |
@@ -426,7 +420,6 @@ Learn more about [[!DNL Experience Manager Guides]](https://business.adobe.com/p
 | 2023 年 5 月 | [Headless 架構研討會 1](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/headless-architecture/introduction-to-headless/session-1.html) | 影片 | 了解什麼是 Headless 架構、可組合的商務和個人化體驗。 |
 | 2023 年 5 月 | [完整示範[!UICONTROL 即時搜尋]](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/getting-started/capabilities/live-search-full-demonstration.html?lang=zh-Hant) | 影片 | 觀看[!UICONTROL 即時搜尋]功能和彈性的完整示範。 |
 | 2023 年 5 月 | [[!UICONTROL 即時搜尋]簡介](https://experienceleague.adobe.com/docs/commerce-learn/tutorials/marketing/live-search.html) | 影片 | 了解 Adobe Commerce 的[!UICONTROL 即時搜尋]功能如何提供快速、相關且直覺的搜尋體驗。 |
-| 2023 年 5 月 | [自我裝載的 Adobe Commerce 概觀](https://experienceleague.adobe.com/docs/commerce-operations/implementation-playbook/infrastructure/self-hosting/overview.html) | 影片 | 了解移至電子商務平台時要考慮的自我裝載最佳做法。 |
 
 {style="table-layout:auto"}
 
@@ -495,8 +488,8 @@ Adobe Commerce 的新文章和現有文章的更新。
 ### [!DNL Campaign] 說明資源
 
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign/campaign-v8/new/whats-new.html?lang=zh-Hant) - [實作指南](https://experienceleague.adobe.com/docs/campaign/campaign-v8/config/implement/implement.html?lang=zh-Hant)
-* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
-* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
+* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home)
+* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
 * [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html?lang=zh-Hant)
 
 +++
@@ -608,9 +601,7 @@ Experience League 上的新的 [!DNL Workfront] 課程與教學課程系列。
 | 2023 年 5 月 | [設定 Workfront Fusion 練習檔案](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/fusion/welcome-to-workfront-fusion/set-up-your-fusion-exercise-files-walkthrough.html) | 影片 | 了解如何在 Adobe Workfront Fusion 下載練習檔案，並將這些檔案上傳到 Workfront 的資料夾中。 |
 | 2023 年 5 月 | [共用專案](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/share-a-project.html) | 影片 | 了解如何共用專案，以便利害關係人和對專案感興趣的其他人可以使用 Workfront 查看完成的工作。 |
 | 2023 年 5 月 | [有關要求佇列的常見問題](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/request-queues/request-queue-faq.html) | 文章 | 取得 Workfront 中要求佇列常見問題的答案。 |
-| 2023 年 5 月 | [了解增強分析中的資源產能圖表](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/reporting/enhanced-analytics/19-resource-capacity-chart.html) | 影片 | 了解資源產能圖表如何顯示在篩選的時段內指派給主團隊的規劃時數與團隊的總可用時數的比較。 |
 | 2023 年 5 月 | [了解增強型分析中的團隊活動圖表](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/reporting/enhanced-analytics/18-activity-by-team-chart.html) | 文章 | 在 Workfront 中了解您組織的主團隊時間使用情況。 |
-| 2023 年 5 月 | [了解增強型分析中的團隊產能](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/reporting/enhanced-analytics/20-team-capacity-overview.html) | 文章 | 了解團隊產能圖表如何顯示主團隊何時分配過多或過少。 |
 | 2023 年 5 月 | [完成目標後關閉目標](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/manage-goals/close-a-goal-once-complete.html) | 影片 | 了解如何使用 [!UICONTROL Goals] 關閉目標。 |
 | 2023 年 5 月 | [了解基本專案建立](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/projects/understand-basic-project-creation.html) | 影片 | 了解讓專案上線執行的四個步驟、專案定義，以及最常見的三種專案建立方式。 |
 | 2023 年 5 月 | [更新結果和活動的進度](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/workfront-goals/manage-goals/make-a-quantitative-update.html) | 影片 | 了解如何在 Workfront Goals 中更新結果和活動的進度。 |
