--- a/c-legacy-releases/2023/07122023.md
+++ b/c-legacy-releases/2023/07122023.md
@@ -6,9 +6,9 @@ last-update: July 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: 6180abeb-9d5f-4a23-bbcd-ebb7f4407398
-source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
+source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
 workflow-type: tm+mt
-source-wordcount: '4610'
+source-wordcount: '4583'
 ht-degree: 98%
 
 ---
@@ -33,7 +33,7 @@ ht-degree: 98%
 
 最近更新日期：**2023 年 7 月 12 日**
 
-* [[!DNL Experience League] 活動和更新](#events)
+* [[!DNL Experience League] 活動與最新訊息](#events)
 * [Adobe 的認證](#certification)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Experience Cloud] 介面與管理](#ecloud)
@@ -97,11 +97,11 @@ ht-degree: 98%
 
 ## ![圖示](/assets/ec_appicon_24.png)Experience Cloud 介面與管理 {#ecloud}
 
-了解有關 [!DNL Experience Cloud] 介面。管理產品和使用者、配置設定檔的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
+了解有關 [!DNL Experience Cloud] 介面。管理產品和使用者、配置輪廓的設定和偏好設定、搜尋 Experience Cloud 物件以及管理 Cookie。
 
 +++詳細資訊
 
-有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 對象])。
+有關 Experience Cloud 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包含[!UICONTROL 客戶屬性]、[!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
@@ -124,7 +124,7 @@ ht-degree: 98%
 | 2023 年 7 月 | [將範例資料匯入 [!DNL Experience Platform]](https://experienceleague.adobe.com/docs/platform-learn/tutorials/import-sample-data.html?lang=zh-Hant) | 已更新的影片 | 了解如何設定包含範例資料的 [!DNL Experience Platform] 沙箱環境。您可以使用 [!UICONTROL Postman] 集合來建立欄位群組、結構描述、資料集，然後將範例資料匯入 [!DNL Experience Platform]。 |
 | 2023 年 7 月 | [驗證及存取  [!DNL Experience Platform] API](https://experienceleague.adobe.com/docs/platform-learn/tutorials/platform-api-authentication.html?lang=zh-Hant) | 已更新的影片 | 開始使用 Adobe [!DNL Experience Platform] API。本教學課程將指導您完成建立身份驗證憑據並提出 [!DNL Experience Platform] API 請求的程序。 |
 | 2023 年 7 月 | [ [!DNL Experience Platform] 資料架構師和資料工程師快速入門](https://experienceleague.adobe.com/docs/platform-learn/getting-started-for-data-architects-and-data-engineers/overview.html) | 更新的教學課程 | 本教學課程是以 [!DNL Experience Platform] 進行操作的最佳起點。 |
-| 2023 年 7 月 | [使用[!UICONTROL 更新插入]](https://experienceleague.adobe.com/docs/platform-learn/tutorials/profiles/update-a-specific-attribute-with-upsert.html)更新特定的設定檔文件屬性 | 影片 | 了解如何使用 [!DNL Experience Platform] 的 `upsert` 功能更新設定檔文件的特定屬性。 |
+| 2023 年 7 月 | [使用[!UICONTROL 更新插入]](https://experienceleague.adobe.com/docs/platform-learn/tutorials/profiles/update-a-specific-attribute-with-upsert.html)更新特定的輪廓文件屬性 | 影片 | 了解如何使用 [!DNL Experience Platform] 的 `upsert` 功能更新輪廓文件的特定屬性。 |
 
 {style="table-layout:auto"}
 
@@ -300,9 +300,9 @@ _新功能_
 
 全新改進的用戶體驗[建立連結共用](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/manage/share-assets.html)以及一組全新的設定，讓管理員可以為您的使用者自訂此功能的預設行為。
 
-**Dynamic Media：更新圖像設定檔中與智慧型裁切相關的欄位**
+**Dynamic Media：更新圖像輪廓中與智慧型裁切相關的欄位**
 
-影像設定檔中一些與智慧型裁切相關之欄位的使用者介面現已更新，以反映定義智慧型裁切的最新指引。請參閱[裁切選項](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/dynamicmedia/image-profiles.html?#crop-options)。
+影像輪廓中一些與智慧型裁切相關之欄位的使用者介面現已更新，以反映定義智慧型裁切的最新指引。請參閱[裁切選項](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/assets/dynamicmedia/image-profiles.html?#crop-options)。
 
 _Assets 視圖中的新功能：_
 
@@ -344,7 +344,7 @@ _Forms 的可用新功能_
 
 此功能引進了可回溯相容於OOTB錯誤處理常式的標準錯誤回應，並具備更優異的彈性和控制能力，有助於改善您的整體錯誤處理能力。
 
-[表單資料模型的增強身份驗證方法](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html)：透過引入以客戶端憑證為主的身份驗證，將 AEM Forms (表單資料模型) 與相鏥的資料來源連接起來，體驗更高的安全性。此增強功能減少了模擬或用戶登入程序，加強對您的資料保護。
+[表單資料模型的增強身份驗證方法](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/integrate/use-form-data-model/configure-data-sources.html)：透過引入以客戶端認證為主的身份驗證，將 AEM Forms (表單資料模型) 與相鏥的資料來源連接起來，體驗更高的安全性。此增強功能減少了模擬或用戶登入程序，加強對您的資料保護。
 
 [建立含有可重複欄項的最適化表單](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/forms/adaptive-forms-authoring/authoring-adaptive-forms-core-components/create-an-adaptive-form-on-forms-cs/create-forms-repeatable-sections.html)：您現在可在以核心元件為主的最適化表單中製作折疊式、精靈式、面板和水平標籤等組件，透過此方法來建立可重複欄項。
 
@@ -434,7 +434,7 @@ AEM as a Cloud Service [2023.6.0 - 版本更新](https://adobe.ly/444zA4U)
 |---------|--------|---------|---------|
 | 2023 年 6 月 | [如何查看 AEM 相關服務的狀態](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22310.html) | 新文章 | 了解當您遇到可用性問題時如何查看 AEM 相關服務的狀態。 |
 | 2023 年 6 月 | [dam:relativePath 屬性不會自動更新](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22302.html) | 新文章 | 了解如何解決 `dam:relativePath` 屬性不會自動更新的問題。 |
-| 2023 年 6 月 | [Brand Portal 使用者個人資料的使用不如預期](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22298.html) | 新文章 | 了解 Brand Portal 用戶個人資料使用不如預期的問題解決方案。 |
+| 2023 年 6 月 | [Brand Portal 使用者輪廓的使用不如預期](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22298.html) | 新文章 | 了解 Brand Portal 用戶輪廓使用不如預期的問題解決方案。 |
 | 2023 年 6 月 | [如何擷取 AEM 雲端服務的記錄檔案](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22172.html) | 新文章 | 了解如何擷取 AEM 雲端服務的記錄檔案。 |
 | 2023 年 6 月 | [停用弱密碼](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22348.html) | 新文章 | 了解如何停用弱密碼。 |
 | 2023 年 6 月 | [SAML 錯誤 - *未提供 SAML 回應參數或無效*](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22367.html) | 新文章 | 了解如何修復&#x200B;*未提供 SAML 回應參數或無效*&#x200B;的錯誤。 |
@@ -557,7 +557,7 @@ New videos, tutorials, or courses published for [!DNL Adobe Campaign].
 |---------|----|----|-----------|
 | 2023 年 6 月 | [Campaign Analytics 連線錯誤：*AnalyticsAPIException：收到 403，禁止*](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22296.html) | 新文章 | 了解如何修復[!DNL Campaign] [!DNL Analytics] 連線錯誤：*AnalyticsAPIException：收到 403，禁止*。 |
 | 2023 年 6 月 | [如何修復使用 .woff 和 .woff2 擴充功能時的錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22363.html) | 新文章 | 了解如何在您為 `.woff` 和 `.woff2` 加入白名單後修復中間例項發生的錯誤，以及如何在網頁應用程式中使用這些檔案的擴充功能。 |
-| 2023 年 6 月 | [無法接收透過中間來源例項發送的電子郵件證明](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22350.html) | 新文章 | 了解如何解決中間來源例項發送電子郵件證明但預期電子郵件地址未收到電子郵件的問題。 |
+| 2023 年 6 月 | [無法接收透過中間來源例項發送的電子郵件校樣](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22350.html) | 新文章 | 了解如何解決中間來源例項發送電子郵件校樣但預期電子郵件地址未收到電子郵件的問題。 |
 | 2023 年 6 月 | [如何變更 cookie 的有效性](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22362.html) | 新文章 | 了解如何變更 cookie 的有效性。 |
 | 2023 年 6 月 | [SCM-120008 無法找到元素「事件」的關鍵值](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22036.html) | 新文章 | 了解當 SCM-120008 找不到元素「事件」關鍵值時的解決方案。 |
 | 2023 年 6 月 | [「轉發給朋友」是否專門適用於 MID？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22174.html) | 新文章 | 了解使用「轉發給朋友」時引發錯誤這個問題的解決方案。 |
@@ -567,8 +567,8 @@ New videos, tutorials, or courses published for [!DNL Adobe Campaign].
 ### [!DNL Campaign] 說明資源
 
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign/campaign-v8/new/whats-new.html?lang=zh-Hant) - [實作指南](https://experienceleague.adobe.com/docs/campaign/campaign-v8/config/implement/implement.html?lang=zh-Hant)
-* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
-* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
+* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home)
+* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
 * [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html?lang=zh-Hant)
 
 +++
@@ -592,7 +592,7 @@ New videos, tutorials, or courses published for [!DNL Adobe Campaign].
 | 2023 年 7 月 | [設定、編寫及傳遞簡訊](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/sms-channel/author-sms-messages.html) | 影片 | 了解如何在 [!DNL Journey Optimizer] 行銷活動和歷程中設定、編寫及傳遞簡訊。 |
 | 2023 年 7 月 | [使用案例：交易歷程](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/create-journeys/use-case-transactional-journey.html)： | 已更新的影片 | 瞭解異動歷程的適用使用案例。 瞭解如何建立異動歷程，以及套用哪些最佳實務。 |
 | 2023 年 7 月 | [[!UICONTROL 使用電子郵件設計工具建立內容]](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/email-channel/create-content-with-the-email-designer.html?lang=zh-Hant) | 影片 | 瞭解如何從頭開始建立電子郵件。 了解如何使用 [!DNL AEM Assets] [!UICONTROL Essentials] 資料庫中的資產、編輯回應式電子郵件設計，以及從範本建立電子郵件。 |
-| 2023 年 7 月 | [建立綱要](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/configuration/data-configuration/create-schema.html) | 已更新的影片 | 瞭解如何建立結構、新增欄位群組、建立及設定自訂欄位群組。 |
+| 2023 年 7 月 | [建立結構描述](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/configuration/data-configuration/create-schema.html) | 已更新的影片 | 瞭解如何建立結構、新增欄位群組、建立及設定自訂欄位群組。 |
 
 {style="table-layout:auto"}
 
@@ -638,7 +638,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 ### Marketo Engage 核心更新
 
 * 如需最新資訊，請參閱 [2023 年 7 月 - 最新發行說明](https://experienceleague.adobe.com/docs/marketo/using/release-notes/current.html?lang=zh-Hant)
-* 如需最新發行排程資訊和版本注意事項，請參閱「[!DNL Marketo Engage] [發行排程](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html?lang=zh-Hant)」。
+* 如需最新發行排程資訊和發行說明，請參閱「[!DNL Marketo Engage] [發行排程](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html?lang=zh-Hant)」。
 
 ### 最新 Marketo 教學課程與課程 {#tutorials-marketo}
 
@@ -668,7 +668,6 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
 | 2023 年 7 月 | [了解和管理期限類型和任務限制](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/intermediate-projects/understand-and-manage-duration-types-and-task-constraints.html) | 影片 | 了解期限類型和任務限制，並了解如何確保在專案中進行正確設定。 |
-| 2023 年 7 月 | [使用 [!DNL Workfront] 首頁檢視和核准數位工作](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/issues-requests/review-and-approve-digital-work.html) | 影片 | 了解如何在 [!DNL Workfront] 首頁中尋找並核准專案、任務、問題、檔案和證明。 |
 | 2023 年 7 月 | [建立基本視圖](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/reporting/basic-reporting/create-a-basic-view.html) | 影片 | 了解什麼是視圖、如何建立視圖，以及如何在 [!DNL Workfront] 中與其他用戶共用視圖。 |
 | 2023 年 7 月 | [套用里程碑](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/approval-processes-and-milestone-paths/apply-milestones.html) | 影片 | 了解如何將里程碑路徑套用至 [!DNL Workfront] 專案，並將關鍵任務關聯爲專案中的里程碑步驟。 |
 | 2023 年 7 月 | [透過建立報告來集中所有問題](https://experienceleague.adobe.com/docs/workfront-learn/tutorials-workfront/manage-work/issues-requests/report-on-issues.html) | 影片 | 了解如何在 [!DNL Workfront] 中透過建立報告來集中所有問題。 |
