--- a/c-legacy-releases/2024/01112024.md
+++ b/c-legacy-releases/2024/01112024.md
@@ -6,9 +6,9 @@ last-update: January 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 0cea27bc-3908-4225-86b6-c7e3aad10a0c
-source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
-workflow-type: ht
-source-wordcount: '6121'
+source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+workflow-type: tm+mt
+source-wordcount: '6086'
 ht-degree: 100%
 
 ---
@@ -181,7 +181,7 @@ ht-degree: 100%
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
 | 2023 年 12 月  | [[!DNL AEP] - [!DNL TARGET] 客群 - 在  [!DNL AEP] 中單次啟動後，所有  [!DNL Target]  客群的修改日期都會變更](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23223.html) | 新文章 | 了解為什麼您可能會看到在 [!DNL Adobe Experience Platform] 中啟動單一區段後，[!DNL Target] 目的地 ([!DNL Target UI] 內) 中所有已啟動區段的修改日期都會發生變化。 |
-| 2023 年 12 月  | [[!DNL AEP] - 當來源綱要不符合 [!DNL XDM] 時，串流輪廓更新會失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23026.html) | 新文章 | 了解當串流傳輸輪廓「[!DNL upsert]」時，如果來源綱要不符合 [!DNL XDM]，則資料流會失敗。 |
+| 2023 年 12 月  | [[!DNL AEP] - 當來源結構描述不符合 [!DNL XDM] 時，串流輪廓更新會失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23026.html) | 新文章 | 了解當串流傳輸輪廓「[!DNL upsert]」時，如果來源結構描述不符合 [!DNL XDM]，則資料流會失敗。 |
 | 2023 年 12 月  | [[!DNL AEP] - 授權使用區段中的可尋址客群與首頁中的輪廓計數不相符](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23025.html) | 新文章 | 瞭解授權使用區段中的可尋址客群何時與首頁中的輪廓計數不相符。 |
 
 {style="table-layout:auto"}
@@ -612,7 +612,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2023 年 12 月  | [將  [!DNL Adobe Campaign Classic]  從  [!DNL Linux]  7.9 遷移到 8.8：綜合指南](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23123.html) | 新文章 | 按照此全面的分步指南，了解如何將現有 [!DNL Adobe Campaign Classic] 執行個體從 [!DNL Linux®] 7.9 遷移到 [!DNL Linux®] 8.8。 |
 | 2023 年 12 月  | [為行銷活動設定多個工作流程的限制](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23013.html) | 新文章 | 了解活動中出現錯誤的原因以及如何將「[!UICONTROL 自然屬性]」調整為 *[!UICONTROL 未指定]* 可以有效解決問題。 |
 | 2023 年 12 月  | [[!DNL X-Env-sender] 與 from 網域不同](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23053.html) | 新文章 | 從此詳細指南中了解如何透過檢查正確的外部帳戶的路由來解決當 [!DNL X-Env-sender]AFD 與 from 網域不同時的問題。 |
-| 2023 年 12 月  | [客戶無法從自訂綱要中刪除記錄](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23001.html) | 新文章 | 了解如何解決自訂架構中的資料刪除問題。 |
+| 2023 年 12 月  | [客戶無法從自訂結構描述中刪除記錄](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23001.html) | 新文章 | 了解如何解決自訂結構描述中的資料刪除問題。 |
 | 2023 年 12 月  | [管道觸發器未處理](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23014.html) | 新文章 | 了解一種快速解決方案，以修正未透過在相關執行個體的每個容器上執行命令來處理的管道觸發器。 |
 | 2023 年 12 月  | [行動裝置未&#x200B;*[!UICONTROL 收到 `nmsBroadLogRcp` 中的  [!DNL SMS]  傳遞狀態]*](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23023.html) | 新文章 | 了解如何解決`nmsBroadLogRcp` 中 [!DNL SMS] 傳遞狀態不正確的問題。 |
 | 2023 年 12 月  | [傳送電子郵件傳遞/校訂時發生錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22995.html) | 新文章 | 了解使用部署精靈傳送電子郵件傳遞/校訂時發生錯誤時修正問題的快速指南。 |
@@ -624,7 +624,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 ### [!DNL Campaign] 說明資源
 
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign/campaign-v8/new/whats-new.html?lang=zh-Hant) - [實作指南](https://experienceleague.adobe.com/docs/campaign/campaign-v8/config/implement/implement.html?lang=zh-Hant)
-* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
+* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home)
 * [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
 * [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html?lang=zh-Hant)
 
@@ -639,16 +639,6 @@ Adobe Commerce 的新文章和現有文章的更新。
 ### 最新 [!DNL Journey Optimizer] 產品版本
 
 了解 [Journey Optimizer 發行說明](https://experienceleague.adobe.com/docs/journey-optimizer/using/whats-new/release-notes.html?lang=zh-Hant)中最新功能、改善功能和修正。
-
-### 新 [!DNL Journey Optimizer]教學課程 {#tutorials-ajo}
-
-針對 Adobe [!DNL Journey Optimizer] 發佈的新影片、教學課程或課程。
-
-| 發佈日期 | 名稱 | 類型 | 說明 |
-| -----------| ---------- | ---------- | ---------- |
-| 2023 年 12 月  | [建立和執行 IP 暖身計劃](https://experienceleague.adobe.com/docs/journey-optimizer-learn/tutorials/configuration/channel-configuration/create-and-execute-an-ip-warmup-plan.html) | 影片 | 了解如何建立和執行 IP 暖身計劃。 |
-
-{style="table-layout:auto"}
 
 ### 新的 [!DNL Journey Optimizer] 支援知識庫
 
