--- a/c-legacy-releases/2024/02142024.md
+++ b/c-legacy-releases/2024/02142024.md
@@ -6,9 +6,9 @@ last-update: February 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 7bde64df-af93-4754-9698-9af6919a2976
-source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
-workflow-type: ht
-source-wordcount: '5304'
+source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+workflow-type: tm+mt
+source-wordcount: '5266'
 ht-degree: 100%
 
 ---
@@ -164,7 +164,7 @@ ht-degree: 100%
 | 發佈日期 | 名稱 | 類型 | 說明 |
 |---------|----|----|-----------|
 | 2024 年 1 月 | [開發者透過 [!DNL API]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23389.html?lang=zh-Hant)檢視 [!DNL Assurance] 記錄的方式 | 新文章 | 了解開發者如何透過 [!DNL API] 檢視 [!DNL Assurance] 日誌。 |
-| 2024 年 1 月 | [新增屬性的資料未填入](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23416.html?lang=zh-Hant) | 新文章 | 了解在更新綱要並在 [!DNL Adobe Experience Platform] 中擷取資料後，因新定義的屬性未填入導致生產問題的解決方案。 |
+| 2024 年 1 月 | [新增屬性的資料未填入](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23416.html?lang=zh-Hant) | 新文章 | 了解在更新結構描述並在 [!DNL Adobe Experience Platform] 中擷取資料後，因新定義的屬性未填入導致生產問題的解決結構描述。 |
 | 2024 年 1 月 | [[!DNL AEP] 資料集合 - 在規則中新增自訂事件時發生 *[!UICONTROL 錯誤：「具有規則元件最大值」]*](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23486.html?lang=zh-Hant) | 新文章 | 了解在 [!DNL Experience Platform Data Collection] 屬性中的規則新增事件時出現表示：*具有規則元件最大值*&#x200B;錯誤時的問題解決方案。 |
 
 {style="table-layout:auto"}
@@ -338,7 +338,6 @@ _早期採用者計劃_
 
 _新功能_
 
-* Cloud Manager 現在不僅會驗證主[憑證](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/manage-ssl-certificates/introduction.html?lang=zh-Hant)的到期日期，還會驗證中間憑證的到期日期。
 * CDN [記錄](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/manage-logs.html?lang=zh-Hant) 現在會以壓縮格式傳回。
 
 _早期採用者計劃_
@@ -467,7 +466,6 @@ _已知問題_
 | 2024 年 1 月 | [在 [!UICONTROL Dynamic Media] 上使用[!UICONTROL 智慧影像]出現影像過大的狀況](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23359.html?lang=zh-Hant) | 新文章 | 了解在 [!UICONTROL Dynamic Media] 使用[!UICONTROL 智慧影像]時，有時影像尺寸會比預期中更大的問題。 |
 | 2024 年 1 月 | [在 [!UICONTROL Admin Console] 的使用者群組變更未能反映在  [!DNL AEM]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23390.html?lang=zh-Hant) | 新文章 | 了解在 [!UICONTROL Admin Console] 修改使用者群組時，變更可能不會立即顯示在 [!DNL Adobe Experience Manager (AEM)] 的問題解決方案。 |
 | 2024 年 1 月 | [無法移動 [!UICONTROL 經驗片段]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23391.html?lang=zh-Hant) | 新文章 | 了解有人在 [!DNL Adobe Experience Manager 6.5] 嘗試移動 [!UICONTROL 內容片段]時，[!DNL UI] 會旋轉，且移動作業無法完成的問題解決方案。 |
-| 2024 年 1 月 | [自訂控制台中的 *[!DNL org.apache.sling.api.request.TooManyCallsException]* 錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23463.html?lang=zh-Hant) | 新文章 | 了解如何解決自訂控制台中出現的 *[!DNL org.apache.sling.api.request.TooManyCallsException]* 錯誤。 |
 | 2024 年 1 月 | [ [!DNL AEMaaCS] 鎖定的複製佇列](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23465.html?lang=zh-Hant) | 新文章 | 了解當 [!UICONTROL 複製佇列]在 [!DNL Adobe Experience Manager as a Cloud Service (AEMaaCS)] 被鎖定的問題解決方案。 |
 | 2024 年 1 月 | [[!UICONTROL 目標模式]沒有出現在 [!UICONTROL Sites]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23485.html?lang=zh-Hant) | 新文章 | 了解當 [!UICONTROL 目標模式]沒有出現在 [!UICONTROL Sites時 [!DNL AEMaaCS] 問題的解決方案]。 |
 | 2024 年 1 月 | [如何在  [!DNL AEM as a Cloud Service] 恢復已刪除的內容路徑](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23505.html?lang=zh-Hant) | 新文章 | 了解當您需要尋找在 [!DNL Adobe Experience Manager as a Cloud Service] 恢復特定內容路徑的不同方法時的問題解決方案。 |
@@ -586,7 +584,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2024 年 1 月 | [[!DNL BigQuery] 錯誤：*欄位 `iMessageType` 已將類型從 `INTEGER` 變更為`BOOLEAN`*](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23348.html?lang=zh-Hant) | 新文章 | 如果您嘗試將 `INT8` 位元資料從 [!DNL Adobe Campaign Classic] 插入到 [!DNL GCP BigQuery] 而收到 [!DNL BigQuery] 錯誤時，請參閱此解決方案。 |
 | 2024 年 1 月 | [找不到金鑰 `HKEY_LOCAL_MACHINE \ SOFTWARE \ Neolane \ NL_5 \ nlclient \ error`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23311.html?lang=zh-Hant) | 新文章 | 了解如何以管理員身分執行用戶端主控台來解決 [!DNL Adobe Campaign Classic v7] 上的登入問題。 |
 | 2024 年 1 月 | [傳遞記錄中的鏡像頁面連結未載入](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23365.html?lang=zh-Hant) | 新文章 | 了解傳遞記錄中的鏡像頁面連結未載入時的解決方案。 |
-| 2024 年 1 月 | [ [!DNL Google BigQuery]  綱要的時區不正確)](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23329.html?lang=zh-Hant) | 新文章 | 在 [!DNL Adobe Campaign Classic v8.5] 時，讀取 [!DNL Google BigQuery] 表格在綱要層級定義為 `datetimetz` 欄位中的資料時，如果顯示的資料和小時未包含操作者的時區資訊，請參閱此問題解決方案。 |
+| 2024 年 1 月 | [ [!DNL Google BigQuery]  結構描述的時區不正確)](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23329.html?lang=zh-Hant) | 新文章 | 在 [!DNL Adobe Campaign Classic v8.5] 時，讀取 [!DNL Google BigQuery] 表格在結構描述層級定義為 `datetimetz` 欄位中的資料時，如果顯示的資料和小時未包含操作者的時區資訊，請參閱此問題解決結構描述。 |
 | 2024 年 1 月 | [[!DNL mcSync] 工作流程因鎖死錯誤而失敗](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23471.html?lang=zh-Hant) | 新文章 | 了解在 [!DNL Adobe Campaign Classic v7] 中，當 [!DNL mcSync] 工作流程因鎖死錯誤而失敗時的問題解決方案。 |
 | 2024 年 1 月 | [[!DNL OOTB] 函數 `nms.eventHisto.GetMirrorUrl` 沒有回傳任何 [!DNL URL] 或回傳不正確 [!DNL URL]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23477.html?lang=zh-Hant) | 新文章 | 了解在具有 [!DNL JS] 活動的工作流程中呼叫 [!DNL Out-of-the-box (OOTB)] 函數 `nms.eventHisto.GetMirrorUrl` 時，沒有回傳任何 [!DNL URL] 或回傳不正確的 [!DNL URL] 的問題解決方案。 |
 | 2024 年 1 月 | [存取至  [!DNL SFTP] 資料夾 `/usr/local/neolane/nl6` 或 `/usr/local/neolane/nl6/var/`](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-23493.html?lang=zh-Hant) | 新文章 | 了解如果您需要在 [!DNL Adobe Campaign Classic] 存取 [!DNL SFTP] 資料夾 `/usr/local/neolane/nl6` 或 `/usr/local/neolane/nl6/var/` 時該如何作業。 |
@@ -598,7 +596,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 * [!DNL Campaign] Web 介面：[新增內容](https://experienceleague.adobe.com/docs/campaign-web/v8/whats-new.html?lang=zh-Hant) - [產品文件](https://experienceleague.adobe.com/docs/campaign-web/v8/campaign-web-home.html?lang=zh-Hant)
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign/campaign-v8/new/whats-new.html?lang=zh-Hant) - [實作指南](https://experienceleague.adobe.com/docs/campaign/campaign-v8/config/implement/implement.html?lang=zh-Hant)
-* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
+* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home)
 * [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
 * [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html?lang=zh-Hant)
 
