--- a/c-legacy-releases/2024/03132024.md
+++ b/c-legacy-releases/2024/03132024.md
@@ -6,9 +6,9 @@ last-update: March 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: 62141f30-b6b4-4813-a819-35262ed8e0c1
-source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
-workflow-type: ht
-source-wordcount: '5860'
+source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+workflow-type: tm+mt
+source-wordcount: '5840'
 ht-degree: 100%
 
 ---
@@ -349,7 +349,6 @@ _早期採用者計劃_
 
 _新功能_
 
-* Cloud Manager 現在不僅會驗證主[憑證](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/manage-ssl-certificates/introduction.html?lang=zh-Hant)的到期日期，還會驗證中間憑證的到期日期。
 * CDN [記錄](https://experienceleague.adobe.com/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/manage-logs.html?lang=zh-Hant) 現在會以壓縮格式傳回。
 
 _早期採用者計劃_
@@ -542,7 +541,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 |---------|--------|---------|---------|
 | 2024 年 2 月 | [[!DNL Quality Patches Tool (QPT)]](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/support-tools/patches/patches-available-in-qpt-tool-overview.html?lang=zh-Hant) | 新文章 | 關於如何套用 [!DNL QPT] 1.1.44、[!DNL QPT] 1.1.45 與 [!DNL QPT] 1.1.46 中可用之修補程式的新文章已發佈，而且可以在其各自區段中找到。 |
 | 2024 年 2 月 | [資料庫中相同實體有多個資料列](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/database/multiple-rows-in-database-for-same-entity.html?lang=zh-Hant) | 新文章 | 本文針對資料庫中相同實體 ID 有多個資料列的問題提供解決方案。 |
-| 2024 年 2 月 | 升級至 Adobe Commerce 2.4.5 版後出現[Recommendations [!DNL JS] 錯誤](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/installation-and-upgrade/recommendations-js-errors-after-upgrade-to-adobe-commerce-version-2-4-5.html?lang=zh-Hant) | 新文章 | 本文針對升級至 Adobe Commerce (所有部署方法) 後控制台中出現與產品 Recommendations 模組/單元相關的 [!DNL JS] 錯誤，提供修正方法。 |
+| 2024 年 2 月 | 升級至 Adobe Commerce 2.4.5 版後出現[推薦 [!DNL JS] 錯誤](https://experienceleague.adobe.com/docs/commerce-knowledge-base/kb/troubleshooting/installation-and-upgrade/recommendations-js-errors-after-upgrade-to-adobe-commerce-version-2-4-5.html?lang=zh-Hant) | 新文章 | 本文針對升級至 Adobe Commerce (所有部署方法) 後控制台中出現與產品推薦模組/單元相關的 [!DNL JS] 錯誤，提供修正方法。 |
 
 {style="table-layout:auto"}
 
@@ -611,7 +610,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 * [!DNL Campaign] Web 介面：[新增內容](https://experienceleague.adobe.com/docs/campaign-web/v8/whats-new.html?lang=zh-Hant) - [產品文件](https://experienceleague.adobe.com/docs/campaign-web/v8/campaign-web-home.html?lang=zh-Hant)
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign/campaign-v8/new/whats-new.html?lang=zh-Hant) - [實作指南](https://experienceleague.adobe.com/docs/campaign/campaign-v8/config/implement/implement.html?lang=zh-Hant)
-* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
+* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home)
 * [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
 * [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html?lang=zh-Hant)
 
