--- a/c-legacy-releases/2024/04172024.md
+++ b/c-legacy-releases/2024/04172024.md
@@ -6,9 +6,9 @@ last-update: April 2024
 author: mfrei
 mini-toc-levels: 2
 exl-id: e5d888f4-a5f9-4ce4-bdd5-a973151f374c
-source-git-commit: d8785cce1fc732456f7f7de7a82fc5dbf055c185
-workflow-type: ht
-source-wordcount: '6019'
+source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
+workflow-type: tm+mt
+source-wordcount: '5972'
 ht-degree: 100%
 
 ---
@@ -332,7 +332,6 @@ _早期採用者計劃_
 
 _新功能_
 
-* Cloud Manager 現在不僅會驗證主[憑證](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/manage-ssl-certificates/introduction)的到期日期，還會驗證中間憑證的到期日期。
 * CDN [記錄](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-cloud-service/content/implementing/using-cloud-manager/manage-logs) 現在會以壓縮格式傳回。
 
 _早期採用者計劃_
@@ -439,7 +438,6 @@ _已知問題_
 | 2024 年 3 月 | AEM CS | [AEM Champion 最佳實務與提示 - 解決移轉到 AEM as a Cloud Service 時的常見困難和挑戰](https://experienceleague.adobe.com/zh-hant/docs/experiences-by-you/experiences-by-you/experience-manager/cloud-service/cloud-manager-best-practices/migration-challenges) | 影片 | 探究 AEM 專家 Wilson Faure 分享的寶貴見解和最佳實務。在本影片中，他深入探討了移轉至 AEM as a Cloud Service 期間遇到的常見困難和挑戰，並提供了建議和專家提示，以利順利且成功進行轉換。 |
 | 2024 年 3 月 | AEM Sites | [Cloud 5 - 在 [!DNL Edge Delivery Services]中發佈、取消發佈事件](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/cloud-service/expert-resources/cloud-5/season-3/cloud5-publish-events)  | 影片 | 探索在 [!DNL Edge Delivery Services] 發佈和取消發佈時觸發的事件，以及使用這些事件的使用案例和範例。 |
 | 2024 年 3 月 | AEM Sites | [查詢索引和 Excel 公式](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/cloud-service/expert-resources/cloud-5/season-3/cloud5-query-indexes) | 影片 | 探索查詢索引以及如何編寫 Excel 公式來使用 [!DNL Edge Delivery Services] 操作和排序資料集。 |
-| 2024 年 3 月 | Adobe Cloud Manager | [新增自訂網域名稱](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/cloud-service/cloud-manager/custom-domain-names) | 影片 | 了解如何將自訂網域名稱新增至 AEM as a Cloud Service 網站。 |
 | 2024 年 3 月 | AEM Assets | [AEM Assets 影片和教學課程](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/assets/overview) | 影片 | 在 Experience League 上，尋找 AEM Assets 的新影片和教學課程。 |
 | 2024 年 3 月 | 影片 | [開始使用 [!DNL Edge Delivery Services]](https://experienceleague.adobe.com/zh-hant/docs/experience-manager-learn/sites/edge-delivery-services/overview#getting-started-with-edge-delivery-services) | 影片 | 了解如何使用 Edge Delivery Services 快速建立網站。 |
 
