--- a/c-legacy-releases/2023/06072023.md
+++ b/c-legacy-releases/2023/06072023.md
@@ -6,7 +6,7 @@ last-update: June 2023
 author: mfrei
 mini-toc-levels: 2
 exl-id: 8f612076-fc5e-4a83-9195-f7f0647d279d
-source-git-commit: 599a0b0f2a1ed3424b8b1fa3de2a03d1fab03cf4
+source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
 workflow-type: tm+mt
 source-wordcount: '4968'
 ht-degree: 99%
@@ -33,7 +33,7 @@ ht-degree: 99%
 
 最近更新日期：**2023 年 6 月 21 日**
 
-* [[!DNL Experience League] 活動和更新](#events)
+* [[!DNL Experience League] 活動與最新訊息](#events)
 * [Adobe 的認證](#certification)
 * [[!DNL Adobe System Status]](#status)
 * [[!DNL Experience Cloud] 介面與管理](#ecloud)
@@ -98,7 +98,7 @@ ht-degree: 99%
 
 ## ![圖示](/assets/ec_appicon_24.png)Experience Cloud 介面與管理 {#ecloud}
 
-尋找下列項目的更新：Experience Cloud 介面首頁、管理 (產品和使用者管理)、使用者設定檔設定、偏好設定、搜尋和 Cookie。
+尋找下列項目的更新：Experience Cloud 介面首頁、管理 (產品和使用者管理)、使用者輪廓設定、偏好設定、搜尋和 Cookie。
 
 +++詳細資訊
 
@@ -106,7 +106,7 @@ ht-degree: 99%
 
 * 在[!DNL Experience Cloud]**[!UICONTROL 說明]**&#x200B;選單中，內容搜尋已更新為在 [Experience League](https://experienceleague.adobe.com/#home) 搜尋結果中按應用程式篩選。
 
-有關 Experience Cloud 介面常用元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包含[!UICONTROL 客戶屬性], [!DNL Experience Cloud Assets]和[!UICONTROL 對象])。
+有關 Experience Cloud 介面常用元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/docs/core-services/interface/experience-cloud.html) (包含[!UICONTROL 客戶屬性], [!DNL Experience Cloud Assets]和[!UICONTROL 客群])。
 
 +++
 
@@ -128,11 +128,11 @@ ht-degree: 99%
 | 類型 | 產品功能 | 說明 |
 | -----------| ---------- |---------- |
 | 2023 年 6 月 | [擷取資料，從  [!DNL Marketo Engage]](https://experienceleague.adobe.com/docs/platform-learn/tutorials/sources/ingest-data-from-marketo.html) | 影片 | 了解如何使用來源連接器和兩個工作流程，從 [!DNL Marketo Engage] 擷取資料至 [!DNL Real-Time Customer Data Platform] (B2B 版) 和[!DNL Adobe Experience Platform]。 |
-| 2023 年 6 月 | [使用 CRM 來源連接器 (Salesforce) 擷取資料](https://experienceleague.adobe.com/docs/platform-learn/tutorials/sources/ingest-data-from-crm.html) | 影片 | 了解如何以無縫連接方式將 CRM 來源資料大量擷取至[!UICONTROL 即時客戶設定檔]和資料湖。 |
+| 2023 年 6 月 | [使用 CRM 來源連接器 (Salesforce) 擷取資料](https://experienceleague.adobe.com/docs/platform-learn/tutorials/sources/ingest-data-from-crm.html) | 影片 | 了解如何以無縫連接方式將 CRM 來源資料大量擷取至[!UICONTROL 即時客戶輪廓]和資料湖。 |
 | 2023 年 6 月 | [在  [!DNL Real-Time CDP]  中使用  [!DNL Target] 區段](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/use-rtcdp-segments-in-target.html) | 影片 | 了解如何在 Adobe [!DNL Target] 中使用 [!DNL Real-Time Customer Data Platform] 區段，以便在您的網站和行動應用程式上提供個人化體驗。 |
-| 2023 年 6 月 | [啟動區段和設定檔屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/activate-segments-and-profile-attributes.html) | 影片 | 了解如何從 [!DNL Real-Time Customer Data Platform] 啟用區段和設定檔至 Adobe [!DNL Target]。 在您的網站、行動應用程式和其他數位屬性顯示即時個人化內容。 |
-| 2023 年 6 月 | [使用標籤進行資料分類](https://experienceleague.adobe.com/docs/platform-learn/tutorials/data-governance/classify-data-using-labels.html) | 影片 | 了解如何在您的方案和資料集套用標籤。 資料用途標籤可讓您在 [!DNL Experience Platform] 進行資料標記和分類，以反映公司政策、合約義務、合規性要求和地區法規。 |
-| 2023 年 6 月 | [在 Adobe [!DNL Target]使用 [!DNL Real-Time CDP] 設定檔屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/use-rtcdp-profile-attributes-in-target.html) | 影片 | 了解如何在 Adobe [!DNL Target] 中使用 [!DNL Real-Time Customer Data Platform] 設定檔屬性，以在您的網站和行動應用程式上提供個人化體驗。 |
+| 2023 年 6 月 | [啟動區段和輪廓屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/activate-segments-and-profile-attributes.html) | 影片 | 了解如何從 [!DNL Real-Time Customer Data Platform] 啟用區段和輪廓至 Adobe [!DNL Target]。 在您的網站、行動應用程式和其他數位屬性顯示即時個人化內容。 |
+| 2023 年 6 月 | [使用標籤進行資料分類](https://experienceleague.adobe.com/docs/platform-learn/tutorials/data-governance/classify-data-using-labels.html) | 影片 | 了解如何在您的結構描述和資料集套用標籤。 資料用途標籤可讓您在 [!DNL Experience Platform] 進行資料標記和分類，以反映公司政策、合約義務、合規性要求和地區法規。 |
+| 2023 年 6 月 | [在 Adobe [!DNL Target]使用 [!DNL Real-Time CDP] 輪廓屬性](https://experienceleague.adobe.com/docs/platform-learn/tutorials/destinations/target/use-rtcdp-profile-attributes-in-target.html) | 影片 | 了解如何在 Adobe [!DNL Target] 中使用 [!DNL Real-Time Customer Data Platform] 輪廓屬性，以在您的網站和行動應用程式上提供個人化體驗。 |
 
 {style="table-layout:auto"}
 
@@ -278,7 +278,7 @@ Adobe 建議您瀏覽以下資源，以隨時掌握發佈內容資訊：
 
 _新功能_
 
-* 將 AEM as a Cloud Service 中的內容片段匯出到 Adobe Target 作為 JSON 選件。<!-- OLD. UPDATE ON JUNE 7 -->
+* 將 AEM as a Cloud Service 中的內容片段匯出到 Adobe Target 作為 JSON 產品建議。<!-- OLD. UPDATE ON JUNE 7 -->
 * 支援 GraphQL 分頁和排序，以及內部快取增強功能，現在可協助提升分離的用戶端應用程式在使用複雜 GraphQL 查詢和篩選器從 AEM 擷取大型內容集時的工作效能。<!-- OLD. UPDATE ON JUNE 7 -->
 
 ### [!DNL Experience Manager Assets] as a [!DNL Cloud Service]
@@ -394,7 +394,7 @@ _已知問題_
 | 2023 年 5 月 | [管道失敗的錯誤&#x200B;_end_aem_createsegmentstore 屬性遺失_](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22091.html) | 新文章 | 了解 CI/CD 管道因錯誤而失敗時的問題解決方案&#x200B;_end_aem_createsegmentstore 屬性遺失_。 |
 | 2023 年 5 月 | [如何監控複製佇列](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22082.html) | 新文章 | 了解如何監控複製佇列。 |
 | 2023 年 5 月 | [如何推出已刪除的 [!UICONTROL LIVE COPY]](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22081.html) | 新文章 | 了解如何推出已刪除的 [!UICONTROL Live Copy]。 |
-| 2023 年 5 月 | [使用 OAuth 伺服器至伺服器憑證來啟用 Brand Portal](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22074.html) | 新文章 | 了解為什麼客戶應該使用 JWT 憑證方式，而不是使用 [!DNL OAuth Sever-to-Server]憑證方式來建立 Adobe [!UICONTROL IMS 技術帳戶設定]。 |
+| 2023 年 5 月 | [使用 OAuth 伺服器至伺服器認證來啟用 Brand Portal](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22074.html) | 新文章 | 了解為什麼客戶應該使用 JWT 認證方式，而不是使用 [!DNL OAuth Sever-to-Server]認證方式來建立 Adobe [!UICONTROL IMS 技術帳戶設定]。 |
 | 2023 年 5 月 | [即使進行 SAML SSO 驗證後發生 AEM 登出問題](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22065.html) | 新文章 | 了解當使用 SAML 單一登入 (SSO) 進行 AEM 驗證時使用者無法登出的問題解決方案。 |
 | 2023 年 5 月 | [透過 CM API 因 405 錯誤而失敗來刪除 NetworkInfrastructure](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22063.html) | 新文章 | 了解透過 CM API 因 405 錯誤而失敗來刪除 `NetworkInfrastructure` 的問題解決方案。 |
 | 2023 年 5 月 | [透過移轉集失敗來提取內容](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22031.html) | 新文章 | 了解為什麼透過 [!DNL Migration Set] 提取內容可能會失敗。 |
@@ -512,7 +512,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 | 2023 年 5 月 | [如何防止 Deco-mail 收件人所造成的電子郵件發送緩慢？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21942.html) | 新文章 | 了如何防止 [!UICONTROL Deco-mail] 收件人所造成的電子郵件發送緩慢。 |
 | 2023 年 5 月 | [交付會花多久時間收集追蹤資料？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21990.html) | 新文章 | 了解追蹤資料儲存在伺服器上的時間長度。。 |
 | 2023 年 5 月 | [Adobe Campaign Classic 與 SOCKS5 代理之間的相容性](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22075.html) | 新文章 | 查看是否有可能在 [!DNL Campaign Classic] 中使用 SOCKS5 代理轉移文件。 |
-| 2023 年 5 月 | [未找到架構定義 - 無法從方案錯誤產生](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21964.html) | 新文章 | 了解無法重新起草和發布自訂資源時的解決方案。 |
+| 2023 年 5 月 | [未找到結構描述定義 - 無法從結構描述錯誤產生](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21964.html) | 新文章 | 了解無法重新起草和發布自訂資源時的解決方案。 |
 | 2023 年 5 月 | [交付會花多久時間收集追蹤資料？](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-21990.html) | 新文章 | 了解追蹤資料儲存在伺服器上的時間長度。。 |
 | 2023 年 5 月 | [交付失敗且有&#x200B;_訊息佇列 (達到連接配額)_&#x200B;錯誤](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22154.html) | 新文章 | 找出交付因&#x200B;_「郵件已加入佇列」(達到連線配額)_ 錯誤而失敗的解決方案。 |
 | 2023 年 5 月 | [有許多伺服器時如何為內部部署執行個體進行升級後續作業](https://experienceleague.adobe.com/docs/experience-cloud-kcs/kbarticles/KA-22055.html) | 新文章 | 了解有許多伺服器時如何為內部部署執行個體進行升級後續作業。 |
@@ -522,8 +522,8 @@ Adobe Commerce 的新文章和現有文章的更新。
 ### [!DNL Campaign] 說明資源
 
 * [!DNL Campaign] v8：[文件](https://experienceleague.adobe.com/docs/campaign/campaign-v8/campaign-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign/campaign-v8/new/whats-new.html?lang=zh-Hant) - [實作指南](https://experienceleague.adobe.com/docs/campaign/campaign-v8/config/implement/implement.html?lang=zh-Hant)
-* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-standard/using/documentation-updates.html?lang=zh-Hant)
-* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [操作說明影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
+* [!DNL Campaign] Standard：[Campaign Standard 文件](https://experienceleague.adobe.com/docs/campaign-standard/using/campaign-standard-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-notes.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-standard-learn/tutorials/overview.html?lang=zh-Hant) - [發行規劃](https://experienceleague.adobe.com/docs/campaign-standard/using/release-notes/release-planning.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/zh-hant/docs/campaign-standard/using/campaign-standard-home)
+* [!DNL Campaign] Classic：[Campaign Classic v7 文件](https://experienceleague.adobe.com/docs/campaign-classic/using/campaign-classic-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/campaign-classic/using/release-notes/latest-release.html?lang=zh-Hant) - [作法影片](https://experienceleague.adobe.com/docs/campaign-classic-learn/tutorials/overview.html?lang=zh-Hant) - [最新文件更新](https://experienceleague.adobe.com/docs/campaign-classic/using/documentation-updates.html?lang=zh-Hant)
 * [!DNL Campaign] 控制面板：[文件](https://experienceleague.adobe.com/docs/control-panel/using/control-panel-home.html?lang=zh-Hant) - [發行說明](https://experienceleague.adobe.com/docs/control-panel/using/release-notes/release-notes.html?lang=zh-Hant) - [操作方法影片](https://experienceleague.adobe.com/docs/control-panel-learn/tutorials/control-panel-overview.html?lang=zh-Hant)
 
 +++
@@ -600,7 +600,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 ### Marketo Engage 核心更新
 
 * 如需最新資訊，請參閱 [2023 年 3 月 - 最新發行資訊](https://experienceleague.adobe.com/docs/marketo/using/release-notes/current.html?lang=zh-Hant)
-* 如需最新發行排程資訊和發行說明，請參閱 [!DNL Marketo Engage] [發行排程](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html)。
+* 如需最新發行排程資訊和發行說明，請參閱「[!DNL Marketo Engage] [發行排程](https://experienceleague.adobe.com/docs/marketo/using/release-notes/release-schedule.html)」。
 
 ### 最新 Marketo 教學課程與課程 {#tutorials-marketo}
 
@@ -614,7 +614,7 @@ New articles and updates to existing articles for [!DNL Journey Optimizer].-->
 | 2023 年 6 月 | [活動計劃](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/programs-and-campaigns/event-programs.html) | 影片 | 觀看此影片進行基本了解，並建立您的第一項活動計劃。 |
 | 2023 年 6 月 | [建立活動計劃](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/events/events-watch.html) | 影片 | 了解如何建立商展活動計劃，主要是根據 [!DNL Marketo] 中預先建立的計劃來進行。 |
 | 2023 年 6 月 | [報告與分析](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/reporting/reporting-and-analytics.html) | 影片 | 了解如何導覽 [!DNL Analytics] 和 [!UICONTROL 資料庫]部分，提取 [!DNL Marketo Engage] 中不同的現成可用報表。 |
-| 2023 年 6 月 | [了解 Marketo 計劃和行銷活動](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/fundamentals/programs-and-campaigns.html) | 影片 | 計劃代表一項單一行銷計劃。 了解如何將這些計劃與行動活動一起使用，以各種方式吸引您的對象。 |
+| 2023 年 6 月 | [了解 Marketo 計劃和行銷活動](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/fundamentals/programs-and-campaigns.html) | 影片 | 計劃代表一項單一行銷計劃。 了解如何將這些計劃與行動活動一起使用，以各種方式吸引您的客群。 |
 | 2023 年 6 月 | [導覽 Marketo Engage 使用者介面](https://experienceleague.adobe.com/docs/marketo-learn/tutorials/fundamentals/ui-navigation.html) | 影片 | 了解如何導覽使用者介面並熟悉您使用 [!DNL Marketo Engage] 平台的方式。 |
 
 {style="table-layout:auto"}
