--- a/c-legacy-releases/2024/09122024.md
+++ b/c-legacy-releases/2024/09122024.md
@@ -5,10 +5,11 @@ doc-type: release notes
 last-update: October 2024
 author: mfrei
 mini-toc-levels: 2
-source-git-commit: 1da5fc78eb0f384acbd012bdcd1b3da7e94c740e
+exl-id: 42cf0348-3fc1-4ec9-b12f-96bf395cadc6
+source-git-commit: fa7494e85ecd363d33a9cceceba5b01f82353495
 workflow-type: tm+mt
-source-wordcount: '3829'
-ht-degree: 97%
+source-wordcount: '3744'
+ht-degree: 98%
 
 ---
 
@@ -137,7 +138,7 @@ Experience League 提供新影片[播放清單](https://experienceleague.adobe.c
 | 發行日期 | 功能 | 說明 |
 | -----------| -----------| ---------- |
 | 10 年 9 月 | [!DNL Experience Cloud] 中的 [!DNL Slack] 通知 | 您可以設定帳戶偏好，以便傳送 [!DNL Experience Cloud] 通知至 Slack。請參閱[訂閱 Slack 通知](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/features/account-preferences)以了解詳細資料。 |
-| 2 年 10 月 | 可自訂首頁 | 在Experience Cloud登入頁面上，按一下&#x200B;**[!UICONTROL 編輯]**。 [!UICONTROL 編輯]模式可讓您透過存取Widget資料庫和自訂背景來個人化Experience Cloud首頁。 [!UICONTROL 編輯]模式提供順暢、直覺式的控制，用於移動、調整大小及管理Widget，包括大量動作和版面調整，提供更美觀且量身打造的體驗。透過存取Widget程式庫和自訂背景，可讓您設定Experience Cloud首頁。 |
+| 10 月 2 日 | 可自訂的首頁 | 在 Experience Cloud 登陸頁面上，按一下&#x200B;**[!UICONTROL 編輯]**。您可以利用[!UICONTROL 編輯]模式來存取小工具程式庫和自訂背景，以便自訂 Experience Cloud 首頁。[!UICONTROL 編輯]模式提供順暢、直覺式的控制，用於移動、調整大小及管理Widget，包括大量動作和版面調整，提供更美觀且量身打造的體驗。透過存取Widget程式庫和自訂背景，可讓您設定Experience Cloud首頁。 |
 
 如需有關 [!DNL Experience Cloud] 統一介面元件的說明，請參閱 [Experience Cloud 介面與管理指南](https://experienceleague.adobe.com/zh-hant/docs/core-services/interface/experience-cloud) (包括 [!UICONTROL Customer Attributes]、[!DNL Experience Cloud Assets] 和 [!UICONTROL Audiences])。
 
@@ -333,10 +334,7 @@ New tutorials published for [!DNL Customer Journey Analytics].
 
 | 發佈日期 | 名稱 | 類型 | 說明 |
 | -----------| ---------- | ---------- | ---------- |
-| 2024 年 9 月 | [新增和移除監控程式、關閉和重新開啟票證](https://experienceleague.adobe.com/zh-hant/docs/commerce-learn/tutorials/getting-started/help-and-support/add-remove-watchers-close-reopen-support-ticket) | 影片 | 了解如何在適用於 Adobe Commerce 的 Experience League 中新增和移除監控程式，以及關閉和重新開啟支援票證。 |
-| 2024 年 9 月 | [管理支援票證](https://experienceleague.adobe.com/zh-hant/docs/commerce-learn/tutorials/getting-started/help-and-support/search-track-comment-escalate-support-ticket) | 影片 | 了解如何在適用於 Adobe Commerce 的 Experience League 中建立搜尋、檢閱、委託和向上呈報支援票證。 |
 | 2024 年 9 月 | [New Relic 警報通知設定](https://experienceleague.adobe.com/zh-hant/docs/commerce-learn/tutorials/tools/new-relic/new-relic-alert-notification-setup) | 影片 | 了解如何在 New Relic 中找到警報、原則、工作流程和目標。觀察將電子郵件新增到現有原則有多輕鬆。 |
-| 2024 年 9 月 | [使用 Experience League 建立支援票證](https://experienceleague.adobe.com/zh-hant/docs/commerce-learn/tutorials/getting-started/help-and-support/create-a-support-ticket) | 影片 | 了解如何使用適用於 Adobe Commerce 的 Experience League 建立支援票證。 |
 
 ### 新的 [!DNL Commerce] 支援知識庫{#kb-commerce}
 
@@ -451,7 +449,7 @@ Adobe Commerce 的新文章和現有文章的更新。
 
 尋找 Adobe [!DNL Journey Optimizer B2b Edition] 的發行說明和新文件。
 
-+++詳細資料
++++詳細資訊
 
 * 有關發行說明和自助功能，請參閱 [[!DNL Journey Optimizer B2B Edition] 文件](https://experienceleague.adobe.com/zh-hant/docs/journey-optimizer-b2b/user/guide-overview)。
 * 請參閱 [[!DNL Journey Optimizer B2B Edition]](https://business.adobe.com/products/journey-optimizer-b2b-edition.html) 以了解產品資訊。
@@ -673,4 +671,3 @@ The [Experience Cloud Certification](https://experienceleague.adobe.com/en/docs/
 And more! Head over to [Adobe Certification](https://experienceleague.adobe.com/en/docs/certification/program/overview) on Experience League and start your certification journey today!
 
 +++ -->
-
